[tool.poetry]
name = "basilex-pygame"
version = "0.1.0"
description = ""
authors = ["ikappaki <ikappaki@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "basilex_pygame", from = "src"}]

[tool.poetry.dependencies]
python = "^3.11"
basilisp = "^0.2.4"
pygame = "^2.6.0"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
